--- a/sarafun_tree/package.xml
+++ b/sarafun_tree/package.xml
@@ -12,6 +12,8 @@
   <build_depend>actionlib_msgs</build_depend>
   <build_depend>roscpp</build_depend>
   <build_depend>behavior_tree_leaves</build_depend>
+  <build_depend>behavior_tree_core</build_depend>
+  <run_depend>behavior_tree_core</run_depend>
   <run_depend>behavior_tree_leaves</run_depend>
   <run_depend>actionlib</run_depend>
   <run_depend>actionlib_msgs</run_depend>
