--- a/sarafun_tree/CMakeLists.txt
+++ b/sarafun_tree/CMakeLists.txt
@@ -11,6 +11,7 @@ find_package(catkin REQUIRED COMPONENTS
 )
 
 link_directories(${catkin_LIBRARY_DIRS})
+set(CMAKE_CXX_FLAGS "-std=c++11 ${CMAKE_CXX_FLAGS}")
 
 catkin_package(
   CATKIN_DEPENDS actionlib_msgs behavior_tree_leaves behavior_tree_core
@@ -37,5 +38,5 @@ target_link_libraries(InsertionWithDeformationAction ${catkin_LIBRARIES})
 add_executable(PlaceAction src/PlaceAction.cpp)
 target_link_libraries(PlaceAction ${catkin_LIBRARIES})
 
-add_executable(sarafun_bt_demo src/sarafun_bt_demo.cpp)
+add_executable(sarafun_bt_demo src/sarafun_bt_demo.cpp src/parse_tree.cpp)
 target_link_libraries(sarafun_bt_demo ${catkin_LIBRARIES})
