Implemented the BT actions with the new template class

--- a/sarafun/sarafun_tree/CMakeLists.txt
+++ b/sarafun/sarafun_tree/CMakeLists.txt
@@ -4,6 +4,8 @@ project(sarafun_tree)
 find_package(catkin REQUIRED COMPONENTS
   behavior_tree_leaves
   behavior_tree_core
+  sarafun_manipulation
+  sarafun_assembly
   roscpp
   std_msgs
   actionlib_msgs
