--- a/sarafun/sarafun_tree/package.xml
+++ b/sarafun/sarafun_tree/package.xml
@@ -11,10 +11,14 @@
   <build_depend>actionlib</build_depend>
   <build_depend>actionlib_msgs</build_depend>
   <build_depend>roscpp</build_depend>
+  <build_depend>sarafun_manipulation</build_depend>
+  <build_depend>sarafun_assembly</build_depend>
   <build_depend>behavior_tree_leaves</build_depend>
   <build_depend>behavior_tree_core</build_depend>
   <run_depend>behavior_tree_core</run_depend>
   <run_depend>behavior_tree_leaves</run_depend>
+  <run_depend>sarafun_manipulation</run_depend>
+  <run_depend>sarafun_assembly</run_depend>
   <run_depend>actionlib</run_depend>
   <run_depend>actionlib_msgs</run_depend>
   <run_depend>roscpp</run_depend>
