--- a/sarafun_assembly/package.xml
+++ b/sarafun_assembly/package.xml
@@ -11,6 +11,9 @@
   <build_depend>actionlib</build_depend>
   <build_depend>actionlib_msgs</build_depend>
   <build_depend>roscpp</build_depend>
+  <build_depend>sarafun_generic_al_server</build_depend>
+
+  <run_depend>sarafun_generic_al_server</run_depend>
   <run_depend>actionlib</run_depend>
   <run_depend>actionlib_msgs</run_depend>
   <run_depend>roscpp</run_depend>
