Moved demo packages into a demo folder

--- a/sarafun_tree/CMakeLists.txt
+++ b/sarafun_tree/CMakeLists.txt
@@ -25,26 +25,26 @@ include_directories(
   ${catkin_INCLUDE_DIRS}
 )
 
-add_executable(GrabObjectAction src/GrabObjectAction.cpp)
+add_executable(GrabObjectAction src/demo_bt_nodes/GrabObjectAction.cpp)
 target_link_libraries(GrabObjectAction ${catkin_LIBRARIES})
 
-add_executable(ApproachObjectsAction src/ApproachObjectsAction.cpp)
+add_executable(ApproachObjectsAction src/demo_bt_nodes/ApproachObjectsAction.cpp)
 target_link_libraries(ApproachObjectsAction ${catkin_LIBRARIES})
 
-add_executable(FoldingAssemblyAction src/FoldingAssemblyAction.cpp)
+add_executable(FoldingAssemblyAction src/demo_bt_nodes/FoldingAssemblyAction.cpp)
 target_link_libraries(FoldingAssemblyAction ${catkin_LIBRARIES})
 
-add_executable(InsertionWithDeformationAction src/InsertionWithDeformationAction.cpp)
+add_executable(InsertionWithDeformationAction src/demo_bt_nodes/InsertionWithDeformationAction.cpp)
 target_link_libraries(InsertionWithDeformationAction ${catkin_LIBRARIES})
 
-add_executable(PlaceAction src/PlaceAction.cpp)
+add_executable(PlaceAction src/demo_bt_nodes/PlaceAction.cpp)
 target_link_libraries(PlaceAction ${catkin_LIBRARIES})
 
-add_executable(OnlineMotionAction src/OnlineMotionAction.cpp)
+add_executable(OnlineMotionAction src/demo_bt_nodes/OnlineMotionAction.cpp)
 target_link_libraries(OnlineMotionAction ${catkin_LIBRARIES})
 
 add_executable(sarafun_bt_demo src/sarafun_bt_demo.cpp src/parse_tree.cpp)
 target_link_libraries(sarafun_bt_demo ${catkin_LIBRARIES})
 
-add_executable(IsSimple src/IsSimple.cpp src/parse_tree.cpp)
+add_executable(IsSimple src/demo_bt_nodes/IsSimple.cpp)
 target_link_libraries(IsSimple ${catkin_LIBRARIES})
