--- a/sarafun_tree/package.xml
+++ b/sarafun_tree/package.xml
@@ -9,6 +9,7 @@
 
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>actionlib</build_depend>
+  <build_depend>std_srvs</build_depend>
   <build_depend>actionlib_msgs</build_depend>
   <build_depend>roscpp</build_depend>
   <build_depend>sarafun_manipulation</build_depend>
@@ -20,6 +21,7 @@
   <run_depend>sarafun_manipulation</run_depend>
   <run_depend>sarafun_assembly</run_depend>
   <run_depend>actionlib</run_depend>
+  <run_depend>std_srvs</run_depend>
   <run_depend>actionlib_msgs</run_depend>
   <run_depend>roscpp</run_depend>
 </package>
