--- a/demo_action_implementations/sarafun_manipulation/package.xml
+++ b/demo_action_implementations/sarafun_manipulation/package.xml
@@ -1,20 +1,16 @@
 <?xml version="1.0"?>
-<package>
+<package format="2">
   <name>sarafun_manipulation</name>
-  <version>0.1.0</version>
+  <version>0.2.0</version>
   <description>Dummy manipulation actionlib servers for showcasing a BT implementation</description>
   <maintainer email="diogoa@kth.se">Diogo Almeida</maintainer>
   <author>Diogo Almeida</author>
-  <license>TODO</license>
+  <license>BSD</license>
 
   <buildtool_depend>catkin</buildtool_depend>
-  <build_depend>actionlib</build_depend>
-  <build_depend>actionlib_msgs</build_depend>
-  <build_depend>roscpp</build_depend>
-  <build_depend>sarafun_generic_al_server</build_depend>
+  <depend>actionlib</depend>
+  <depend>actionlib_msgs</depend>
+  <depend>roscpp</depend>
+  <depend>sarafun_generic_al_server</depend>
 
-  <run_depend>sarafun_generic_al_server</run_depend>
-  <run_depend>actionlib</run_depend>
-  <run_depend>actionlib_msgs</run_depend>
-  <run_depend>roscpp</run_depend>
 </package>
