--- a/sarafun_tree/package.xml
+++ b/sarafun_tree/package.xml
@@ -8,6 +8,9 @@
   <license>BSD</license>
 
   <buildtool_depend>catkin</buildtool_depend>
+  <build_depend>message_generation</build_depend>
+  <build_export_depend>message_runtime</build_export_depend>
+  <exec_depend>message_runtime</exec_depend>
 
   <depend>actionlib</depend>
   <depend>std_srvs</depend>
