Fixed linking, compilation and dependency issues

--- a/tree_generator/CMakeLists.txt
+++ b/tree_generator/CMakeLists.txt
@@ -3,6 +3,7 @@ project(tree_generator)
 
 find_package(catkin REQUIRED COMPONENTS
   roscpp
+  roslib
   sarafun_msgs
   actionlib_msgs
   actionlib
@@ -12,7 +13,7 @@ link_directories(${catkin_LIBRARY_DIRS})
 set(CMAKE_CXX_FLAGS "-std=c++11 ${CMAKE_CXX_FLAGS}")
 
 catkin_package(
-  CATKIN_DEPENDS actionlib actionlib_msgs sarafun_msgs roscpp
+  CATKIN_DEPENDS actionlib actionlib_msgs sarafun_msgs roscpp roslib
   INCLUDE_DIRS include
   LIBRARIES
 )
@@ -22,6 +23,6 @@ include_directories(
   ${catkin_INCLUDE_DIRS}
 )
 
-add_executable(tree_generator src/tree_generator.cpp)
+add_executable(tree_generator src/TreeFromKF.cpp src/tree_generator.cpp)
 target_link_libraries(tree_generator ${catkin_LIBRARIES})
 add_dependencies(tree_generator ${catkin_EXPORTED_TARGETS})
