--- a/tree_generator/package.xml
+++ b/tree_generator/package.xml
@@ -10,6 +10,7 @@
   <buildtool_depend>catkin</buildtool_depend>
 
   <depend>roscpp</depend>
+  <depend>roslib</depend>
   <depend>actionlib</depend>
   <depend>std_srvs</depend>
   <depend>actionlib_msgs</depend>
