--- a/.travis.yml
+++ b/.travis.yml
@@ -73,9 +73,15 @@ before_install:
   # Prepare rosdep to install dependencies.
   - sudo rosdep init
   - rosdep update
+  - git clone https://github.com/stack-of-tasks/soth
 
 # Create a catkin workspace with the package under integration.
 install:
+  - cd ~/soth
+  - mkdir ~/soth/_build
+  - cd ~/soth/_build
+  - cmake ..
+  - make install
   - mkdir -p ~/catkin_ws/src
   - cd ~/catkin_ws/src
   - catkin_init_workspace
