--- a/.travis.yml
+++ b/.travis.yml
@@ -74,7 +74,7 @@ before_install:
   - sudo rosdep init
   - rosdep update
   - cd ~
-  - git clone https://github.com/stack-of-tasks/soth
+  - git clone --recursive https://github.com/stack-of-tasks/soth
 
 # Create a catkin workspace with the package under integration.
 install:
