--- a/.travis.yml
+++ b/.travis.yml
@@ -82,7 +82,7 @@ install:
   - mkdir ~/soth/_build
   - cd ~/soth/_build
   - cmake ..
-  - make install
+  - sudo make install
   - mkdir -p ~/catkin_ws/src
   - cd ~/catkin_ws/src
   - catkin_init_workspace
