--- a/.travis.yml
+++ b/.travis.yml
@@ -69,6 +69,10 @@ before_install:
   - wget http://packages.ros.org/ros.key -O - | sudo apt-key add -
   - sudo apt-get update -qq
   - sudo apt-get install -y python-catkin-pkg python-rosdep python-wstool ros-$ROS_DISTRO-catkin ros-$ROS_DISTRO-kdl-parser
+  - sudo apt-get install liblapack-dev
+  - sudo apt-get install libblas-dev
+  - sudo apt-get install libboost-dev
+  - sudo apt-get install libarmadillo-dev
   - source /opt/ros/$ROS_DISTRO/setup.bash
   # Prepare rosdep to install dependencies.
   - sudo rosdep init
