added missing repository in travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -73,7 +73,9 @@ before_install:
   - sudo apt-get install libblas-dev
   - sudo apt-get install libboost-dev
   - sudo apt-get install libarmadillo-dev
-  - sudo apt-get install gcc-4.9 g++-4.9
+  - sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
+  - sudo apt-get update
+  - sudo apt-get install gcc-4.9 g++4.9
   - source /opt/ros/$ROS_DISTRO/setup.bash
   # Prepare rosdep to install dependencies.
   - sudo rosdep init
