--- a/.travis.yml
+++ b/.travis.yml
@@ -82,6 +82,7 @@ before_install:
   - rosdep update
   - cd ~
   - git clone --recursive https://github.com/stack-of-tasks/soth
+  - git clone --recursive https://github.com/oftc/yaml-cpp.git
 
 # Create a catkin workspace with the package under integration.
 install:
@@ -89,6 +90,12 @@ install:
   - mkdir ~/soth/_build
   - cd ~/soth/_build
   - cmake ..
+  - sudo make install
+  - cd ~/yaml-cpp
+  - mkdir build
+  - cd build
+  - cmake ..
+  - make
   - sudo make install
   - mkdir -p ~/catkin_ws/src
   - cd ~/catkin_ws/src
